# university-qt-project-survival-test

./: CMakeLists.txt  CMakePresets.json  readme.md  release.sh
.github/workflows/: release_linux.yml  release_windows.yml
src/: config.h.in
src/app/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp  mainwindow.cpp  mainwindow.h
src/components/: CMakeLists.txt
src/components/AppPlainText/: AppPlainText.cpp  AppPlainText.h
src/components/AppTitle/: AppTitle.cpp  AppTitle.h
src/layouts/home/: CMakeLists.txt  HomeLayout.cpp  HomeLayout.h
src/layouts/result/: CMakeLists.txt  ResultLayout.cpp  ResultLayout.h
src/layouts/testing/: CMakeLists.txt  TestingLayout.cpp  TestingLayout.h
src/widgets/AboutWidget/: AboutWidget.cpp  AboutWidget.h  CMakeLists.txt
src/widgets/HomeWidget/: CMakeLists.txt  HomeWidget.cpp  HomeWidget.h
src/widgets/ResultWidget/: CMakeLists.txt  ResultWidget.cpp  ResultWidget.h
src/widgets/TestingWidget/: CMakeLists.txt  TestingWidget.cpp  TestingWidget.h
tests/: CMakeLists.txt
